Add endpoint to submit votes
Adds a POST /proposals/vote endpoint to the gameroom REST API
